--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
+*{
+    font-family: 'Lato', sans-serif;
+}
+
 #gridsContainer {
     margin: auto;
     width: 400px;
-    height: 800px;
+    height: 880px;
     background-color: dimgray;
     box-shadow: inset 0 0 1em #333;
     display: flex;
@@ -13,6 +17,9 @@
     width: 38px;
     height: 38px;
 }
+.gridSpawn {
+    background-color: #333333;
+}
 
 .colorZ { background-color: rgb(212, 93, 85); }
 .colorS { background-color: rgb(113, 212, 85); }
@@ -21,3 +28,15 @@
 .colorI { background-color: rgb(85, 212, 193); }
 .colorT { background-color: rgb(178, 85, 212); }
 .colorO { background-color: rgb(212, 206, 85); }
+
+
+
+#gameOverPopup {
+    position: absolute;
+    margin-top: -100px;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    height: 200px;
+    background-color: rgba(0,0,0, 0.5);
+}
